website/versioned_docs/version-2.0.0-beta.3/api/plugin/index.md
---
sidebar_position: 0
description: nonebot.plugin 模块
---

# nonebot.plugin

本模块为 NoneBot 插件开发提供便携的定义函数。

## 快捷导入

为方便使用，本模块从子模块导入了部分内容，以下内容可以直接通过本模块导入:

- `on` => [`on`](./on.md#on)
- `on_metaevent` => [`on_metaevent`](./on.md#on_metaevent)
- `on_message` => [`on_message`](./on.md#on_message)
- `on_notice` => [`on_notice`](./on.md#on_notice)
- `on_request` => [`on_request`](./on.md#on_request)
- `on_startswith` => [`on_startswith`](./on.md#on_startswith)
- `on_endswith` => [`on_endswith`](./on.md#on_endswith)
- `on_fullmatch` => [`on_fullmatch`](./on.md#on_fullmatch)
- `on_keyword` => [`on_keyword`](./on.md#on_keyword)
- `on_command` => [`on_command`](./on.md#on_command)
- `on_shell_command` => [`on_shell_command`](./on.md#on_shell_command)
- `on_regex` => [`on_regex`](./on.md#on_regex)
- `CommandGroup` => [`CommandGroup`](./on.md#CommandGroup)
- `Matchergroup` => [`MatcherGroup`](./on.md#MatcherGroup)
- `load_plugin` => [`load_plugin`](./load.md#load_plugin)
- `load_plugins` => [`load_plugins`](./load.md#load_plugins)
- `load_all_plugins` => [`load_all_plugins`](./load.md#load_all_plugins)
- `load_from_json` => [`load_from_json`](./load.md#load_from_json)
- `load_from_toml` => [`load_from_toml`](./load.md#load_from_toml)
- `load_builtin_plugin` => [`load_builtin_plugin`](./load.md#load_builtin_plugin)
- `load_builtin_plugins` => [`load_builtin_plugins`](./load.md#load_builtin_plugins)
- `get_plugin` => [`get_plugin`](./plugin.md#get_plugin)
- `get_loaded_plugins` => [`get_loaded_plugins`](./plugin.md#get_loaded_plugins)
- `export` => [`export`](./export.md#export)
- `require` => [`require`](./load.md#require)
